--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -19,4 +19,5 @@ $color-orange: #ff6320;
 
 // z-index
 $z-index--header: 10;
-$z-index--skip-nav: 10000;
+$z-index--nav: 9;
+$z-index--skip-nav: 100;
